@@ -1,4 +1,5 @@
 2013-01-22 Graeme Gott <graeme@gottcode.org>
+	* Attempt to use wordlist that matches locale.
 	* Use language of wordlist in dictionary.
 
 2013-01-20 Graeme Gott <graeme@gottcode.org>
